--- a/2. Strings.ipynb
+++ b/2. Strings.ipynb
@@ -592,8 +592,243 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "5d7021a4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hi Python!\n",
+      "Hello World!\n"
+     ]
+    }
+   ],
+   "source": [
+    "#replace() method in a string\n",
+    "\n",
+    "message = 'Hello Python!'\n",
+    "\n",
+    "message_hi = message.replace('Hello','Hi')\n",
+    "message_python = message.replace('Python','World')\n",
+    "print(message_hi)\n",
+    "print(message_python)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "244abb16",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Amey Rao\n"
+     ]
+    }
+   ],
+   "source": [
+    "msg='Amey Lonkar'\n",
+    "\n",
+    "msg_1=msg.replace('Lonkar','Rao')\n",
+    "print(msg_1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "98bcf2e4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n"
+     ]
+    }
+   ],
+   "source": [
+    "# find() method application in a string.\n",
+    "\n",
+    "message= \"Hello World\"\n",
+    "\n",
+    "print(message.find('Wo'))\n",
+    "\n",
+    "# the output is the index number of the first element of the substring."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "df0d68fb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-1\n",
+      "39\n"
+     ]
+    }
+   ],
+   "source": [
+    "text='Jean-Paul Sartre was born in 1905. His father, a navy captain, died when he was a baby – and he grew up extremely close to his mother until she remarried, much to his regret, when he was twelve. Sartre spent most of his life in Paris, where he often went to cafes on the Left Bank and sat on benches in the Jardin du Luxembourg. He had a strabismus, a wandering eye, and wore distinctive, heavy glasses. He was awarded the 1964 Nobel Prize for literature, but refused it on the grounds that the award was capitalist and bourgeois. He was very short (five feet three inches) and frequently described himself as ugly. He wore his hair vigorously brushed back. When he died in 1980 (aged 74), 50,000 people accompanied his coffin through the streets of Paris'\n",
+    "\n",
+    "# find the index of the substring 'Nancy'\n",
+    "\n",
+    "print(text.find('Nancy'))\n",
+    "print(text.find('father'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "528c7074",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'jean-paul sartre was born in 1905. his father, a navy captain, died when he was a baby – and he grew up extremely close to his mother until she remarried, much to his regret, when he was twelve. sartre spent most of his life in paris, where he often went to cafes on the left bank and sat on benches in the jardin du luxembourg. he had a strabismus, a wandering eye, and wore distinctive, heavy glasses. he was awarded the 1964 nobel prize for literature, but refused it on the grounds that the award was capitalist and bourgeois. he was very short (five feet three inches) and frequently described himself as ugly. he wore his hair vigorously brushed back. when he died in 1980 (aged 74), 50,000 people accompanied his coffin through the streets of paris'"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Convert the text to lower case.\n",
+    "\n",
+    "text.lower()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "5924e411",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'JEAN-PAUL SARTRE WAS BORN IN 1905. HIS FATHER, A NAVY CAPTAIN, DIED WHEN HE WAS A BABY – AND HE GREW UP EXTREMELY CLOSE TO HIS MOTHER UNTIL SHE REMARRIED, MUCH TO HIS REGRET, WHEN HE WAS TWELVE. SARTRE SPENT MOST OF HIS LIFE IN PARIS, WHERE HE OFTEN WENT TO CAFES ON THE LEFT BANK AND SAT ON BENCHES IN THE JARDIN DU LUXEMBOURG. HE HAD A STRABISMUS, A WANDERING EYE, AND WORE DISTINCTIVE, HEAVY GLASSES. HE WAS AWARDED THE 1964 NOBEL PRIZE FOR LITERATURE, BUT REFUSED IT ON THE GROUNDS THAT THE AWARD WAS CAPITALIST AND BOURGEOIS. HE WAS VERY SHORT (FIVE FEET THREE INCHES) AND FREQUENTLY DESCRIBED HIMSELF AS UGLY. HE WORE HIS HAIR VIGOROUSLY BRUSHED BACK. WHEN HE DIED IN 1980 (AGED 74), 50,000 PEOPLE ACCOMPANIED HIS COFFIN THROUGH THE STREETS OF PARIS'"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Convert the text to upper case.\n",
+    "\n",
+    "text. upper()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "e0a256c7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Jean-paul sartre was born in 1905. his father, a navy captain, died when he was a baby – and he grew up extremely close to his mother until she remarried, much to his regret, when he was twelve. sartre spent most of his life in paris, where he often went to cafes on the left bank and sat on benches in the jardin du luxembourg. he had a strabismus, a wandering eye, and wore distinctive, heavy glasses. he was awarded the 1964 nobel prize for literature, but refused it on the grounds that the award was capitalist and bourgeois. he was very short (five feet three inches) and frequently described himself as ugly. he wore his hair vigorously brushed back. when he died in 1980 (aged 74), 50,000 people accompanied his coffin through the streets of paris'"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Convert the text to Capitalize\n",
+    "\n",
+    "text. capitalize()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "436331f2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Count() method returns the number of elements wuth the specified value.\n",
+    "\n",
+    "text.count('died')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "f82b87be",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello World\n",
+      "Amey Lonkar\n",
+      "Hi, My name is Amey Lonkar and I am 21 years old.\n",
+      "Hi, My name is Amey Lonkar and I am 21 years old.\n",
+      "Hi, My name is Amey Lonkar and I am 21 years old.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# format() method\n",
+    "\n",
+    "'''\n",
+    "The format() method formats the specified value(s) and insert them inside the string's placeholder.\n",
+    "The placeholder is defined using curly brackets.{}\n",
+    "'''\n",
+    "\n",
+    "txt= 'Hello {word}'\n",
+    "print(txt.format(word='World'))\n",
+    "\n",
+    "\n",
+    "txt2= 'Amey {Lonker}'\n",
+    "\n",
+    "print(txt2.format(Lonker='Lonkar'))\n",
+    "\n",
+    "\n",
+    "txt3= 'Hi, My name is {} and I am {} years old.'\n",
+    "\n",
+    "print (txt3.format('Amey Lonkar', 21))\n",
+    "\n",
+    "txt4='Hi, My name is {name} and I am {age} years old.'\n",
+    "\n",
+    "print(txt4.format(name='Amey Lonkar', age=21))\n",
+    "\n",
+    "\n",
+    "txt5='Hi, My name is {0} and I am {1} years old.'\n",
+    "print(txt5.format('Amey Lonkar',21))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0ad58921",
    "metadata": {},
    "outputs": [],
    "source": []
