--- a/3.Lists.ipynb
+++ b/3.Lists.ipynb
@@ -297,8 +297,811 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "32f27955",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[10, 20, 30, [40]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# append method\n",
+    "y=[10,20,30]\n",
+    "\n",
+    "y.append([40])\n",
+    "print(y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "6ba03723",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[10, 20, 30, [40], 40, 40]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# extend method\n",
+    "\n",
+    "y.extend([40])\n",
+    "print(y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "cc3388fc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[10, 20, 60, 30, [40], 40, 40]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# insert method\n",
+    "\n",
+    "y.insert(2,60)\n",
+    "print(y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "2cd1d749",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# count method\n",
+    "\n",
+    "z=[10,20,30,40,20,20]\n",
+    "\n",
+    "z.count(20)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "8f69797e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Clear method\n",
+    "z=[20,30]\n",
+    "\n",
+    "z.clear()\n",
+    "z"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "32136464",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[10, 20, 60, 30, [40], 40, 40]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# index method\n",
+    "print(y)\n",
+    "y.index(40)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "96c18bcf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[10, 20, 30, [40], 40]\n"
+     ]
+    },
+    {
+     "ename": "IndexError",
+     "evalue": "pop index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32mC:\\Users\\ROUSHA~1\\AppData\\Local\\Temp/ipykernel_4424/4293385083.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0my\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 5\u001b[1;33m \u001b[0my\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpop\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m6\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      6\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      7\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0my\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mIndexError\u001b[0m: pop index out of range"
+     ]
+    }
+   ],
+   "source": [
+    "# pop method\n",
+    "\n",
+    "print(y)\n",
+    "\n",
+    "y.pop(6)\n",
+    "\n",
+    "print(y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "afc7542b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[10, 20, 30, [40], 40]\n"
+     ]
+    }
+   ],
+   "source": [
+    "y.pop(2)\n",
+    "print(y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "aa3c6130",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[10, 20, 30]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# reverse method\n",
+    "t=[30,20,10]\n",
+    "\n",
+    "t.reverse()\n",
+    "print(t)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "c7289be3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Amey Lonkar\n",
+      "raknoL yemA\n"
+     ]
+    }
+   ],
+   "source": [
+    "# reverse the string method\n",
+    "u='Amey Lonkar'\n",
+    "print(u)\n",
+    "print(u[::-1])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "01d2df26",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[10, 20, 30, 40, 60, 80]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# sort method ascending order.\n",
+    "i=[30,40,10,20,80,60]\n",
+    "i.sort()\n",
+    "print(i)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "78707da9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "80"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# max number of list.\n",
+    "max(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "f69c78f3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# minimum number of list.\n",
+    "\n",
+    "min(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "f18d2491",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "240"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# sum of the list.\n",
+    "sum(i)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0ec4ce93",
+   "metadata": {},
+   "source": [
+    "# Changing the element of a list since it is mutable.\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "add54716",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Before changing: ['Python', 3.14, 2023, [1, 2, 3, 4, 5, 6, 81, 20], ('Hello World', 3, 14, 2023)]\n",
+      "After Changing: ['Amey Lonkar', 3.14, 2023, [1, 2, 3, 4, 5, 6, 81, 20], ('Hello World', 3, 14, 2023)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "nlis=['Python',3.14,2023,[1,2,3,4,5,6,81,20],('Hello World',3,14,2023)]\n",
+    "\n",
+    "print('Before changing:',nlis)\n",
+    "nlis[0]='Amey Lonkar'\n",
+    "print('After Changing:',nlis)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "c951e575",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Before Changing: ['Amey Lonkar', 3.14, 2023, [1, 2, 3, 4, 5, 6, 81, 20], ('Hello World', 3, 14, 2023)]\n",
+      "After Changing: ['Amey Lonkar', 3.14, 2023, [1, 2, 3, 4, 5, 6, 90, 20], ('Hello World', 3, 14, 2023)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "print('Before Changing:',nlis)\n",
+    "nlis[3][6]=90\n",
+    "print('After Changing:',nlis)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "51c3d7b6",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'tuple' object does not support item assignment",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32mC:\\Users\\ROUSHA~1\\AppData\\Local\\Temp/ipykernel_4424/3557054078.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mnlis\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m4\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m'Amey Lonkar'\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnlis\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mTypeError\u001b[0m: 'tuple' object does not support item assignment"
+     ]
+    }
+   ],
+   "source": [
+    "# tuple does not support item assignment\n",
+    "nlis[4][0]='Amey Lonkar'\n",
+    "print(nlis)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2e056f9f",
+   "metadata": {},
+   "source": [
+    "# Changing of a string into a list using split() function."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "d3171d00",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Python', 'is', 'a', 'programming', 'language.']"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "message='Python is a programming language.'\n",
+    "\n",
+    "message.split()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dc4fb744",
+   "metadata": {},
+   "source": [
+    "# Use of split() function with a delimeter."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "862c68d4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['p', 'y', 't', 'h', 'o', 'n']"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "text='p,y,t,h,o,n'\n",
+    "\n",
+    "text.split(\",\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2678c7e1",
+   "metadata": {},
+   "source": [
+    "# Basic Operations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "id": "650e36d0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n",
+      "6\n",
+      "['a', 'b', 'Hello', 'Python', 1, 2, 3, 4, 5, 6]\n",
+      "['a', 'b', 'Hello', 'Python', 'a', 'b', 'Hello', 'Python', 'a', 'b', 'Hello', 'Python']\n"
+     ]
+    }
+   ],
+   "source": [
+    "nlis_1=['a','b','Hello','Python']\n",
+    "\n",
+    "nlis_2=[1,2,3,4,5,6]\n",
+    "print(len(nlis_1))\n",
+    "print(len(nlis_2))\n",
+    "print(nlis_1+nlis_2)\n",
+    "\n",
+    "print(nlis_1*3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3a342634",
+   "metadata": {},
+   "source": [
+    "# Concatenate the list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "id": "81e8c53b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['a', 'b', ['c', 'd'], 'e', 1, 2, 3, 4, 5, (6, 7), True, False]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a_list=['a','b',['c','d'],'e']\n",
+    "b_list=[1,2,3,4,5,(6,7),True,False]\n",
+    "\n",
+    "new_list=a_list+b_list\n",
+    "print(new_list)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5aece3ca",
+   "metadata": {},
+   "source": [
+    "# As different from the list, I also siginificant the following information."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "38d4e969",
+   "metadata": {},
+   "source": [
+    "# input function"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8d7c6303",
+   "metadata": {},
+   "source": [
+    " * input() function in Python provides a user of a program supply inputs to the program at runtime."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "id": "6fe95f34",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter a string.Amey Lonkar\n",
+      "The text is:  Amey Lonkar\n",
+      "<class 'str'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "text=input('Enter a string.')\n",
+    "print('The text is: ',text)\n",
+    "\n",
+    "print(type(text))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "id": "539ec068",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter a string.15\n",
+      "The text is:  15\n",
+      "<class 'str'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Although the function wants an integer, the type of the entered number is a string.\n",
+    "text=input('Enter a string.')\n",
+    "print('The text is: ',text)\n",
+    "\n",
+    "print(type(text))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "id": "87d1e1b7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter a string.15\n",
+      "The text is:  15\n",
+      "<class 'int'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "text=int(input('Enter a string.'))\n",
+    "print('The text is: ',text)\n",
+    "\n",
+    "print(type(text))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "id": "0ee5803a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter a string.78.3\n",
+      "The text is:  78.3\n",
+      "<class 'float'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "text=float(input('Enter a string.'))\n",
+    "print('The text is: ',text)\n",
+    "\n",
+    "print(type(text))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "id": "abc3bbcb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "20+30\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('20+30')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8a501884",
+   "metadata": {},
+   "source": [
+    "# eval() functions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e5b30f61",
+   "metadata": {},
+   "source": [
+    " * This function serves the aim of converting a string to an integer or a float.\n",
+    " \n",
+    " "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "id": "3f1faa4c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sum of the expression: 90\n",
+      "<class 'str'>\n",
+      "<class 'int'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "expression='80+10'\n",
+    "total=eval(expression)\n",
+    "print('Sum of the expression:',total)\n",
+    "\n",
+    "print(type(expression))\n",
+    "print(type(total))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6d76fee5",
+   "metadata": {},
+   "source": [
+    "# format() function"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9b0421ea",
+   "metadata": {},
+   "source": [
+    " * This function helps to format the output printed on the screen with good look and attractive."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "id": "3f5b2ad2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter any number:8\n",
+      "Enter second number:7\n",
+      "Sum of 8.0 and 7.0 is 15.0.\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=float(input('Enter any number:'))\n",
+    "b=float(input('Enter second number:'))\n",
+    "\n",
+    "total=a+b\n",
+    "print('Sum of {} and {} is {}.'.format(a,b,total))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "75103c9d",
+   "metadata": {},
+   "source": [
+    "# Comparison operators"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a2a36258",
+   "metadata": {},
+   "source": [
+    " * The operators such as <,>,<=,>=,== and != compare the certain two operands and return True of False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "id": "aab09fda",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a>b is: True\n",
+      "a<b is: False\n",
+      "a<=b is: False\n",
+      "a>=b is: True\n",
+      "a==b is: False\n",
+      "a!=b is: True\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=3.14\n",
+    "b=1.618\n",
+    "\n",
+    "print('a>b is:',a>b)\n",
+    "print('a<b is:',a<b)\n",
+    "print('a<=b is:',a<=b)\n",
+    "print('a>=b is:',a>=b)\n",
+    "print('a==b is:',a==b)\n",
+    "print('a!=b is:', a!=b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0f0fdc8e",
    "metadata": {},
    "outputs": [],
    "source": []
