--- a/3.Lists.ipynb
+++ b/3.Lists.ipynb
@@ -1099,9 +1099,351 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "7ba2bab1",
+   "metadata": {},
+   "source": [
+    "# Logical Operators"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b1e88a36",
+   "metadata": {},
+   "source": [
+    " * The operators including and, or, not are utilized to bring two conditions together and access them. The output returns True or False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "fa28077f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "False\n",
+      "False\n",
+      "True\n",
+      "True\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 3.14\n",
+    "b= 1.618\n",
+    "c=12\n",
+    "d=3.14\n",
+    "\n",
+    "print (a>b and c>a)\n",
+    "print(b>c and d>a)\n",
+    "print(b<c and d>a)\n",
+    "print(b<c or d>a)\n",
+    "print(not a==b)\n",
+    "print(not a==d)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6ee98123",
+   "metadata": {},
+   "source": [
+    "# Assignment operators"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "92f76c47",
+   "metadata": {},
+   "source": [
+    "    * The operators including =,+=,-=,/=,%=,//=,*=,&=,^=,>>= and <<= are employed to evalueate a value to a variable."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "21566f32",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8.14\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 3.14\n",
+    "\n",
+    "x+=5\n",
+    "\n",
+    "print(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "3a683c6a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-1.8599999999999999\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 3.14\n",
+    "\n",
+    "x-=5\n",
+    "\n",
+    "print(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "0214506c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "15.700000000000001\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 3.14\n",
+    "x*=5\n",
+    "print(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "ef65feeb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.628\n"
+     ]
+    }
+   ],
+   "source": [
+    "x=3.14\n",
+    "\n",
+    "x/=5\n",
+    "print(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "9d15a9a6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.14\n"
+     ]
+    }
+   ],
+   "source": [
+    "x=3.14\n",
+    "\n",
+    "x%=5\n",
+    "print(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "a2b80162",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 102258\n",
+    "\n",
+    "x%=5\n",
+    "print(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "f554d7f8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "x=3.14\n",
+    "\n",
+    "x//=5\n",
+    "print(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "908670f3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "305.2447761824001\n"
+     ]
+    }
+   ],
+   "source": [
+    "x=3.14\n",
+    "\n",
+    "x**=5\n",
+    "print(x)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4daabd78",
+   "metadata": {},
+   "source": [
+    "# Identity operators."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cce25695",
+   "metadata": {},
+   "source": [
+    " * The operators is or isnot are employed to control if the operands or objects to the left and right of these operators are referring to a value stored in the same memory location and return True or False."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "f5153d58",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "True\n",
+      "False\n",
+      "True\n",
+      "False\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 3.14\n",
+    "\n",
+    "b = 1.618\n",
+    "\n",
+    "print(a is b)\n",
+    "\n",
+    "print(a is not b)\n",
+    "msg1='Hello Python'\n",
+    "\n",
+    "msg2='Hello, World!'\n",
+    "\n",
+    "print(msg1 is msg2)\n",
+    "print(msg1 is not msg2)\n",
+    "\n",
+    "list1=[3.14,1.618]\n",
+    "list2=[3.14,1.618]\n",
+    "print(list1 is list2)\n",
+    "print(list1 is not list2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7bc55c91",
+   "metadata": {},
+   "source": [
+    "# Membership operators"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a662fba9",
+   "metadata": {},
+   "source": [
+    " * These operators including in and not in are employer to check if the certain value is available in the sequence of value and return True of Fasle."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "7abc8cb4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "False\n",
+      "False\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "# take a list\n",
+    "\n",
+    "nlis=[4,5,6,7,8,'hello',(4,5),{'name':'Python'},{1,2,3},[1,2,3]]\n",
+    "\n",
+    "print(5 in nlis)\n",
+    "print(3 in nlis)\n",
+    "print(4 not in nlis)\n",
+    "print((4,5) in nlis)\n",
+    "print(9 not in nlis)\n",
+    "print([1,2,3] in nlis)\n",
+    "print([1,2,3] in nlis)\n",
+    "print({'name':'Python'} in nlis)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0f0fdc8e",
+   "id": "49024f3e",
    "metadata": {},
    "outputs": [],
    "source": []
