--- a/7. Conditions in Python.ipynb
+++ b/7. Conditions in Python.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "id": "37cb0841",
    "metadata": {},
    "outputs": [
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "9759f92b",
    "metadata": {},
    "outputs": [
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "74958b1e",
    "metadata": {},
    "outputs": [
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "id": "a2338860",
    "metadata": {},
    "outputs": [
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "id": "1c662159",
    "metadata": {},
    "outputs": [
@@ -165,8 +165,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter your age: 3\n",
-      "You are a baby.\n"
+      "Enter your age: 45\n",
+      "You can go to primary school.\n"
      ]
     }
    ],
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "id": "6b6a5e4d",
    "metadata": {},
    "outputs": [
@@ -195,8 +195,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter your age: 17\n",
-      "You cannot vote!\n"
+      "Enter your age: 20\n",
+      "You can vote!\n"
      ]
     }
    ],
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "id": "203c6e0d",
    "metadata": {},
    "outputs": [
@@ -220,8 +220,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter your age: 14\n",
-      "You can watch cartoon at home\n"
+      "Enter your age: 22\n",
+      "You can watch movie in theatre\n"
      ]
     }
    ],
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 8,
    "id": "fda122dd",
    "metadata": {},
    "outputs": [
@@ -248,8 +248,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter your number: 40\n",
-      "Number 40 is even\n"
+      "Enter your number: 45\n",
+      "Number 45 is odd\n"
      ]
     }
    ],
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 9,
    "id": "91135561",
    "metadata": {},
    "outputs": [
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 10,
    "id": "86992f91",
    "metadata": {},
    "outputs": [
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 11,
    "id": "3637c8a4",
    "metadata": {},
    "outputs": [
@@ -325,8 +325,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter your percentage: 55\n",
-      "Your grade is D\n"
+      "Enter your percentage: 70\n",
+      "Your grade is C\n"
      ]
     }
    ],
@@ -357,8 +357,205 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "104e2400",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter your number: 5\n",
+      "Day is Thursday \n"
+     ]
+    }
+   ],
+   "source": [
+    "# Write a program to accept number form 1 to 7 and display the name of the day like 1 for sunday,\n",
+    "# 2 for monday and so on.\n",
+    "num = int(input('Enter your number: '))\n",
+    "\n",
+    "if num == 1:\n",
+    "    print('Day is Sunday')\n",
+    "\n",
+    "elif num == 2:\n",
+    "    print('Day is Monday')\n",
+    "\n",
+    "elif num == 3:\n",
+    "    print('Day is Tuesday')\n",
+    "    \n",
+    "elif num == 4:\n",
+    "    print('Day is Wednesday')\n",
+    "    \n",
+    "elif num == 5:\n",
+    "    print('Day is Thursday ')\n",
+    "    \n",
+    "elif num == 6:\n",
+    "    print('Day is Friday')\n",
+    "    \n",
+    "elif num == 7:\n",
+    "    print('Day is Saturday')\n",
+    "    \n",
+    "else:\n",
+    "    print('Out of Range!')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "dd8341d3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter your number from 1 to 12: 11\n",
+      "Month is November and number of Days are 30\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Write a program to accept number from 1 to 12 and display name of the month and days in \n",
+    "# that month like 1 for January and number of days is 31.\n",
+    "num = int(input('Enter your number from 1 to 12: '))\n",
+    "\n",
+    "if num == 1:\n",
+    "    print('Month is January and Number of Days are 31.')\n",
+    "\n",
+    "elif num == 2:\n",
+    "    print('Month is February and Number of Days are 28 or 29')\n",
+    "    \n",
+    "elif num == 3:\n",
+    "    print('Month is March and number of Days are 31')\n",
+    "    \n",
+    "elif num == 4:\n",
+    "    print('Month is April and number of Days are 30')\n",
+    "    \n",
+    "elif num == 5:\n",
+    "    print('Month is May and number of Days are 31')\n",
+    "    \n",
+    "elif num == 6:\n",
+    "    print('Month is June and number of Days are 30')\n",
+    "    \n",
+    "elif num == 7:\n",
+    "    print('Month is July and number of Days are 31')\n",
+    "    \n",
+    "elif num == 8:\n",
+    "    print('Month is August and number of Days are 31')\n",
+    "    \n",
+    "elif num == 9:\n",
+    "    print('Month is September and number of Days are 30')\n",
+    "\n",
+    "elif num == 10:\n",
+    "    print('Month is October and number of Days are 31')\n",
+    "    \n",
+    "elif num == 11:\n",
+    "    print('Month is November and number of Days are 30')\n",
+    "    \n",
+    "elif num == 12:\n",
+    "    print('Month is December and number of Days are 31')\n",
+    "    \n",
+    "else:\n",
+    "    print('Out of Range')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "fd99d938",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The List of Cities are:  ['Delhi', 'Mumbai', 'Agra', 'Jaipur', 'Pune', 'Gaya', 'Lucknow']\n",
+      "Enter the name of Given city: delhi\n",
+      "Monument is : Red Fort\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Accept any city from the user and display monumnet of that city.\n",
+    "# City--------------------> Monument\n",
+    "# Delhi-------------------> Red Fort\n",
+    "# Agra -------------------> Tajmahal\n",
+    "# Jaipur------------------> Jal Mahal\n",
+    "# Pune--------------------> Shaniwar wada\n",
+    "# Mumbai -----------------> India Gate\n",
+    "# Gaya -------------------> BodhGaya\n",
+    "# Lucknow ----------------> Bara Immambara\n",
+    "\n",
+    "new_list = ['Delhi','Mumbai','Agra','Jaipur','Pune','Gaya','Lucknow']\n",
+    "print('The List of Cities are: ',new_list)\n",
+    "\n",
+    "city=input('Enter the name of Given city: ')\n",
+    "\n",
+    "if city.lower() == 'delhi':\n",
+    "    print('Monument is : Red Fort')\n",
+    "    \n",
+    "elif city.lower() == 'agra':\n",
+    "    print('Monument is : Taj Mahal')\n",
+    "elif city.lower() == 'mumbai':\n",
+    "    print('Monument is : Gateway of India')\n",
+    "    \n",
+    "elif city.lower() =='jaipur':\n",
+    "    print('Monument is : Jal Mahal')\n",
+    "elif city.lower() =='pune':\n",
+    "    print('Monument is : Shaniwar Bada')\n",
+    "elif city.lower() == 'Gaya':\n",
+    "    print('Monument is : Body-Gaya')\n",
+    "elif city.lower() == 'lucknow':\n",
+    "    print('Monument is : Bada Immambada')\n",
+    "    \n",
+    "else:\n",
+    "    print('Please! Enter Correct City Name')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "14f03ecd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter your age: 60\n",
+      "You are a senior citizen\n"
+     ]
+    }
+   ],
+   "source": [
+    "# write a program to check whether a person is senior citizen or not?\n",
+    "\n",
+    "# >=60 -----------------> Senior citizen\n",
+    "# >=45 and <60----------> Adult\n",
+    "# >=18 amd <45----------> Youth\n",
+    "# >=15 and <18 ---------> Teenager\n",
+    "# below 15--------------> Child\n",
+    "age = int(input('Enter your age: '))\n",
+    "\n",
+    "if age >= 60 and age!=101:\n",
+    "    print('You are a senior citizen')\n",
+    "    \n",
+    "elif age >= 45 and age<60:\n",
+    "    print('You are an adult')\n",
+    "    \n",
+    "elif age>=18 and age<45:\n",
+    "    print('You are youth')\n",
+    "elif age>=15 and age<18:\n",
+    "    print('You are Teenager')\n",
+    "else:\n",
+    "    print('You are a child')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "79c7f98f",
    "metadata": {},
    "outputs": [],
    "source": []
