--- a/7. Conditions in Python.ipynb
+++ b/7. Conditions in Python.ipynb
@@ -554,11 +554,292 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "79c7f98f",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter your first number: 45\n",
+      "Enter your second  number: 55\n",
+      "Number 55 is greater than number 45\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Write a program to find the greatest number out of two accepted from user.\n",
+    "num1 = int(input('Enter your first number: '))\n",
+    "num2 = int(input('Enter your second  number: '))\n",
+    "\n",
+    "if num1 > num2:\n",
+    "    print(f'Number {num1} is greater than number {num2}')\n",
+    "    \n",
+    "elif num1 == num2:\n",
+    "    print('Both are equal')\n",
+    "    \n",
+    "else:\n",
+    "    print(f'Number {num2} is greater than number {num1}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "3982eb1c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter your number: -12\n",
+      "The given number is negative\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Wrte a program to check wheter a number is (accepted from user) is positive or negative.\n",
+    "num = int(input('Enter your number: '))\n",
+    "\n",
+    "if num >0:\n",
+    "    print('The given number is positive')\n",
+    "elif num==0:\n",
+    "    print('The Zero is nor a positive or nor a negative number')\n",
+    "else:\n",
+    "    print('The given number is negative')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "98998ed9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter a number: 12\n",
+      "The number 12 is divisible both by 2 and 3\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Write a program to check wheter a number is divisible by 2 and 3 both.\n",
+    "\n",
+    "num = int(input('Enter a number: '))\n",
+    "if num%2 == 0 and num%3 == 0:\n",
+    "    print(f'The number {num} is divisible both by 2 and 3')\n",
+    "    \n",
+    "elif num%2 == 0:\n",
+    "    print(f'The number {num} is divisible by 2 but not 3')\n",
+    "\n",
+    "elif num%3 == 0:\n",
+    "          print(f'The number {num} is divisible by 3 but not 2')\n",
+    "else:\n",
+    "    print(f'The number {num} is not divisible by 2 and 3')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "a62dce2e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter a number: 15\n",
+      "The number 15 is divisible by 3 but not 2\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Second method\n",
+    "num = int(input('Enter a number: '))\n",
+    "if num%2 == 0 and num%3 == 0:\n",
+    "    print(f'The number {num} is divisible both by 2 and 3')\n",
+    "    \n",
+    "elif num%2 == 0 and num%3!=0:\n",
+    "    print(f'The number {num} is divisible by 2 but not 3')\n",
+    "\n",
+    "elif num%3 == 0 and num%2!=0:\n",
+    "          print(f'The number {num} is divisible by 3 but not 2')\n",
+    "else:\n",
+    "    print(f'The number {num} is not divisible by 2 and 3')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "8731e8c6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter First number:22\n",
+      "Enter Second number:23\n",
+      "Enter Third number:24\n",
+      "list[22, 23, 24]\n",
+      "Greatest number is:  24\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Write a program to find the largest number out of three number accepted form the user.\n",
+    "\n",
+    "num1=int(input('Enter First number:'))\n",
+    "num2=int(input('Enter Second number:'))\n",
+    "num3=int(input('Enter Third number:'))\n",
+    "num4=list[num1,num2,num3]\n",
+    "print(num4)\n",
+    "\n",
+    "if num1>num2 and num1> num3:\n",
+    "    print('Greatest number is: ',num1)\n",
+    "    \n",
+    "elif num2>num1 and num2>num3:\n",
+    "    print('Greatest number is: ', num2)\n",
+    "    \n",
+    "else:\n",
+    "    print('Greatest number is: ',num3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "2889a8cd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter First number:22\n",
+      "Enter Second number:23\n",
+      "Enter Third number:24\n",
+      "[22, 23, 24]\n",
+      "Greatest number is: 24\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Write a program to find the largest number out of three number accepted form the user with max function.\n",
+    "num1=int(input('Enter First number:'))\n",
+    "num2=int(input('Enter Second number:'))\n",
+    "num3=int(input('Enter Third number:'))\n",
+    "num4=[num1,num2,num3]\n",
+    "print(num4)\n",
+    "\n",
+    "print('Greatest number is:',max(num4))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "d569e45e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter your age:85\n",
+      "Enter your age:84\n",
+      "Enter your age:83\n",
+      "Enter your age:82\n",
+      "[85, 84, 83, 82]\n",
+      "Youngest age is: 82\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Accept the age of 4 people and display youngest one?\n",
+    "age1=int(input('Enter your age:'))\n",
+    "age2=int(input('Enter your age:'))\n",
+    "age3=int(input('Enter your age:'))\n",
+    "age4=int(input('Enter your age:'))\n",
+    "age5=[age1,age2,age3,age4]\n",
+    "print(age5)\n",
+    "\n",
+    "print('Youngest age is:',min(age5))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "c7ce50e7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter your age: 85\n",
+      "Enter your age: 84\n",
+      "Enter your age: 83\n",
+      "Enter your age: 82\n",
+      "Person with age 82 is the youngest\n"
+     ]
+    }
+   ],
+   "source": [
+    "age1 = int(input('Enter your age: '))\n",
+    "age2 = int(input('Enter your age: '))\n",
+    "age3 = int(input('Enter your age: '))\n",
+    "age4 = int(input('Enter your age: '))\n",
+    "\n",
+    "if age1<age2 and age1<age3 and age1<age4:\n",
+    "    print(f'Person with age {age1} is the youngest')\n",
+    "    \n",
+    "elif age2<age1 and age2<age3 and age2<age4:\n",
+    "    print(f'Person with age {age2} is the youngest')\n",
+    "    \n",
+    "elif age3<age1 and age3<age2 and age3<age4:\n",
+    "    print(f'Person with age {age2} is the youngest')\n",
+    "    \n",
+    "else:\n",
+    "    print(f'Person with age {age4} is the youngest')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "7698c694",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter a character:A\n",
+      "Entered character is vowel: A\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Write a program to check in your word is vowel or not.\n",
+    "\n",
+    "ch=input('Enter a character:')\n",
+    "vow='aeiouAEIOU'\n",
+    "if ch in vow:\n",
+    "    print('Entered character is vowel:',ch)\n",
+    "else:\n",
+    "    print('Entered character is consonent:',ch)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d84adc24",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Write a program to check how many words is vowel or consonent in your name?."
+   ]
   }
  ],
  "metadata": {
