--- a/7. Conditions in Python.ipynb
+++ b/7. Conditions in Python.ipynb
@@ -833,12 +833,196 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "d84adc24",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter your Name: Amey Lonkar\n",
+      "Vowels: 4\n",
+      "Consonent: 7\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Write a program to check how many words are in your name vowel or consonent ?.\n",
+    "\n",
+    "vowels=['a','e','i','o','u','A','E','I','O','U']\n",
+    "ch=input('Enter your Name: ')\n",
+    "vow_ch=0\n",
+    "cons_ch=0\n",
+    "for x in ch:\n",
+    "    if x in vowels:\n",
+    "        vow_ch+=1\n",
+    "    elif x != '':\n",
+    "        cons_ch+=1\n",
+    "print('Vowels:',vow_ch)\n",
+    "print('Consonent:',cons_ch)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "1d94d34f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter your total price: 9000\n",
+      "Net amount to pay: 7650.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Accept the marked price from the user and calculate the Net amount as(marked price-Discount) \n",
+    "# to pay according to the following criteria:\n",
+    "\n",
+    "# Marked Price-----------------------------> Discount\n",
+    "#>10000------------------------------------> 20%\n",
+    "#>7000 and <=10000-------------------------> 15%\n",
+    "#<=7000------------------------------------> 10%\n",
+    "\n",
+    "net_amount=0\n",
+    "discount=0\n",
+    "marked_price=int(input('Enter your total price: '))\n",
+    "if marked_price>10000:\n",
+    "    discount=20/100*marked_price\n",
+    "elif marked_price>7000 and marked_price<=10000:\n",
+    "    discount=15/100*marked_price\n",
+    "elif marked_price<=7000:\n",
+    "    discount=10/100*marked_price\n",
+    "net_amount=marked_price-discount\n",
+    "print('Net amount to pay:',net_amount)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "3b45e5ce",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter your MRP: 9000\n",
+      "Net Amount is:  7650.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Amey Lonkar\n",
+    "mrp = int(input('Enter your MRP: '))\n",
+    "net = 0\n",
+    "dis = 0\n",
+    "if mrp > 10000:\n",
+    "    dis = mrp * 0.2\n",
+    "    net = mrp - dis\n",
+    "elif mrp > 7000 and mrp <= 10000:\n",
+    "    dis = mrp * 0.15\n",
+    "    net = mrp - dis\n",
+    "else:\n",
+    "    dis = mrp * 0.1\n",
+    "    net = mrp - dis\n",
+    "    \n",
+    "print('Net Amount is: ',net)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "0af08425",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter the time period of service 11\n",
+      "Enter your salary10000\n",
+      "Your total salary is:  11000.0\n",
+      "Bonus is 1000.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# A company decided to give bonus to employee according to the following criteria:\n",
+    "\n",
+    "# Time period of Service----------------> Bonus\n",
+    "\n",
+    "# >10 years-----------------------------> 10%\n",
+    "# >=6 and <=10--------------------------> 8%\n",
+    "# <6------------------------------------> 5%\n",
+    "# Ask the user for their salary and years of service and print the bonus amount.\n",
+    "service=int(input('Enter the time period of service '))\n",
+    "\n",
+    "sal=int(input('Enter your salary'))\n",
+    "if service>10:\n",
+    "    bonus=10/100*sal\n",
+    "elif service>=6 and service<=10:\n",
+    "    bonus=8/100*sal\n",
+    "elif service<6:\n",
+    "    bonus=5/100*sal\n",
+    "bonus_sal=sal+bonus\n",
+    "print('Your total salary is: ',bonus_sal)\n",
+    "print('Bonus is', bonus)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "16793d57",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter your Salary: 10000\n",
+      "Enter your years of service to the company: 11\n",
+      "Your bonus salary is:  11000.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "sal = int(input('Enter your Salary: '))\n",
+    "time = int(input('Enter your years of service to the company: '))\n",
+    "bonus = 0\n",
+    "bonus_salary = 0\n",
+    "if time > 10:\n",
+    "    bonus = sal * 0.1\n",
+    "elif time >=6 and time<=10:\n",
+    "    bonus = sal * 0.08\n",
+    "else:\n",
+    "    bonus = sal * 0.05\n",
+    "    \n",
+    "bonus_salary = sal + bonus\n",
+    "print('Your bonus salary is: ',bonus_salary)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c7206a45",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Write a program to check how many words is vowel or consonent in your name?."
+    "# Write a program to calculate bill(accept a number of unit form user) according to the following criteria:\n",
+    "# unit--------------------------> Charges\n",
+    "# first 100 unit----------------> no. charges\n",
+    "# next 100 unit-----------------> 5 rs. per unit.\n",
+    "# After 200 unit----------------> 10 rs. per unit.\n",
+    "\n",
+    "# Ex-\n",
+    "# First 100 units-------> use 100 cost 0\n",
+    "# Next 100 units--------> use 100 cost 500\n",
+    "# After 200 units-------> use 150 cost 1500\n",
+    "# total paid----> 200"
    ]
   }
  ],
