--- a/7. Conditions in Python.ipynb
+++ b/7. Conditions in Python.ipynb
@@ -1007,10 +1007,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "c7206a45",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter number of electric unit: 400\n",
+      "Total cost: 3500\n"
+     ]
+    }
+   ],
    "source": [
     "# Write a program to calculate bill(accept a number of unit form user) according to the following criteria:\n",
     "# unit--------------------------> Charges\n",
@@ -1021,9 +1030,37 @@
     "# Ex-\n",
     "# First 100 units-------> use 100 cost 0\n",
     "# Next 100 units--------> use 100 cost 500\n",
-    "# After 200 units-------> use 150 cost 1500\n",
-    "# total paid----> 200"
+    "# After 200 units-------> use 150 cost 250\n",
+    "# total paid----> if above 200 units add 500 extra amount.\n",
+    "\n",
+    "amt=0\n",
+    "units=int(input('Enter number of electric unit: '))\n",
+    "\n",
+    "if units<=100:\n",
+    "    print('No Charge')\n",
+    "elif units>100 and units<=200:\n",
+    "    cost=(units-100)*5\n",
+    "    print('Total cost:',cost)\n",
+    "elif units>200:\n",
+    "    cost=(units-100)*10\n",
+    "    print('Total cost:',cost+500)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "79e6987c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3dceeac9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
